[tool.poetry]
name = "ocfkit"
version = "0.1.0"
description = "the open computing facility staffer's swiss army knife"
authors = ["Nikhil Jha <mail@nikhiljha.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.11b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
